Add closestFacility demo

--- a/routing/closest-facility.html
+++ b/routing/closest-facility.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Esri Leaflet + Routing Demo</title>
+    <title>Esri Leaflet + Closest Facility Demo</title>
       <!-- Load Leaflet from CDN -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
@@ -16,7 +16,7 @@
   <body>
     <calcite-shell>
       <div class="grid-container">
-        <calcite-panel class="panel-start" heading="Esri Leaflet & routing demo">
+        <calcite-panel class="panel-start" heading="Esri Leaflet & Closest Facility demo">
         <calcite-block open collapsible heading="Directions">
           <div id="directions"></div>
         </calcite-block>
@@ -27,6 +27,6 @@
       </calcite-panel>
       </div>
     </calcite-shell>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/closest-facility.js"></script>
   </body>
 </html>
